# pmp-cli

./: .gitignore  CLAUDE.md  Cargo.toml  FEATURES.md  README.md  docker-compose.yaml  install.sh
.github/workflows/: ci.yml  release.yml
doc/: ROADMAP.md  cicd.md  cloud-inspector-permissions.md  dependencies.md  environments.md  executors.md  hooks.md  import-system-design.md  import.md  marketplace.md  opa-policies.md  plugins.md  projects.md  templates.md
docker/: Dockerfile
docker/postgres-init/: 01-init-terraform-backend.sql
docs/: IMPORT.md  import-system-design.md  infrastructure.md  input-types.md  project-collection.md  template-variables.md  test-coverage-improvements.md
examples/: .pmp.project-collection.yaml  project-collection.yaml
examples/infrastructure-example/: .pmp.infrastructure.yaml  .pmp.project-collection.yaml  README.md
examples/object-inputs-example/: .pmp.template.yaml  README.md  main.tf.hbs
src/: context.rs  main.rs  test_helpers.rs
src/collection/: category_selector.rs  dependency_graph.rs  discovery.rs  manager.rs  mod.rs
src/commands/: apply.rs  audit.rs  backup.rs  ci.rs  ci_detect_changes.rs  clone.rs  cost.rs  create.rs  deps.rs  destroy.rs  devex.rs  disaster_recovery.rs  drift.rs  env.rs  execution_helper.rs  find.rs  generate.rs  graph.rs  import.rs  infrastructure.rs  init.rs  lock.rs  marketplace.rs  mod.rs  monitor.rs  parallel.rs  policy.rs  preview.rs  project_group.rs  provider.rs  refresh.rs  review.rs  search.rs  state.rs  tags.rs  template.rs  template_mgmt.rs  test.rs  ui.rs  update.rs  (+1 more)
src/cost/: infracost.rs  mod.rs  provider.rs
tests/: cli_tests.rs
(+259 files in other folders)
