[package]
name = "pmp"
version = "0.1.0"
edition = "2024"
authors = ["PMP Contributors"]
description = "Poor Man's Platform - A CLI for managing Infrastructure as Code projects"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
inquire = "0.7"
handlebars = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
walkdir = "2.5"
owo-colors = "4.1"
