[package]
name = "pmp-cli"
version = "0.1.0"
edition = "2024"
authors = ["PMP Contributors"]
description = "Poor Man's Platform - A CLI for managing Infrastructure as Code projects"
license = "MIT"

[[bin]]
name = "pmp"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
inquire = "0.7"
handlebars = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"
walkdir = "2.5"
owo-colors = "4.1"
ctrlc = "3.4"
lazy_static = "1.5"
semver = "1.0"
sha1 = "0.10"
regex = "1.10"
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }
mime_guess = "2.0"
url = "2.5"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
whoami = "1.5"
regorus = "0.2"
reqwest = { version = "0.11", features = ["blocking"] }
terminal_size = "0.3"

[dev-dependencies]
tempfile = "3.14"
